k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: geo-climate
  labels:
    name: geo-climate
    environment: production
